package org.pattern.behavioral.strategy.payment;

public interface PaymentStrategy {

    public void pay(double totalPrice);
}
